@@ -4,4 +4,9 @@
 [28, 99, 312, 2016, 4004, 288288]
 [2, 352, 702, 2277, 14352, 123552]
 [23, 198, 1248, 4048, 8073, 1420848]
-Total time spent: 0
+[1]
+[1, 2, 3, 4, 6, 12]
+[[1, matrix(0,2)]]
+[[1, matrix(0,2)], [2, Mat([2, 1])], [3, Mat([3, 1])], [4, Mat([2, 2])], [6,
+ [2, 1; 3, 1]], [12, [2, 2; 3, 1]]]
+Total time spent: 1
